# tetr

./: Cargo.toml  README.md
resources/: block.frag  default.vert  menu.frag  solid_color.frag  texture.frag  texture_optional.frag
src/: main.rs  resource.rs  text.rs  util.rs
src/background/: mod.rs
src/game/: block.rs  keys.rs  mod.rs  tetromino.rs  util.rs
src/game/background/: mod.rs
src/game/board/: effects.rs  mod.rs  piece_generator.rs  renderer.rs  score.rs
src/graphics/: handle.rs  mod.rs  model.rs  shader.rs  texture.rs  transformer.rs
src/menu/: mod.rs
src/shaders/: block.frag  board.frag  meter.frag  texture.frag
