[package]
name = "tetr__"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20.5"
glutin = "0.28.0"
image = "0.24.2"
gl33 = "0.2.1"
json = "0.12.4"
rand = {version = "0.8.5", features = ["small_rng"]}

[features]
global_loader = []
